--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="skill-row">
           <img class="code-img" src="images/computer.png" alt="computer">
           <h3>Lorem & Ipsum</h3>
-          <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum,lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+          <p> dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum,lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
         </div>
         <div class="skill-row">
           <img class="chilli-img" src="images/chilli.png" alt="Chilli">
