--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <div class="top-container">
       <img class="top-cloud"src="images/cloud.png" alt="Cloud" height="100" width="150">
-      <h1>I'm <span>MSK</span></h1>
+      <h1>I'm <span>MSKis</span></h1>
       <h2>a Programmer.</h2>
       <img class="bottom-cloud"src="images/cloud.png" alt="Cloud" height="100" width="150">
       <img src="images/mountain.png" alt="mountain">
