--- a/index.html
+++ b/index.html
@@ -20,27 +20,27 @@
       <div class="profile">
         <img class="my-img" src="images/MSK.jpg" alt="Sai Kishore">
         <h2>Hello.</h2>
-        <p class="intro">Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+        <p class="intro">I'm a web designer / developer based in Hyderabad, India. I have a passion for web design & development and love to create real-time web applications.</p>
       </div>
       <hr>
       <div class="skills">
         <h2>My Skills.</h2>
         <div class="skill-row">
           <img class="code-img" src="images/computer.png" alt="computer">
-          <h3>Lorem & Ipsum</h3>
-          <p> dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum,lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
+          <h3>Design what you want.</h3>
+          <p>I like to keep it simple. My goals are to focus on typography, content and conveying the message that you want to send.</p>
         </div>
         <div class="skill-row">
           <img class="chilli-img" src="images/chilli.png" alt="Chilli">
-          <h3>Lorem Ipsum Dolor</h3>
-          <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
+          <h3>Develop what you need.</h3>
+          <p>I always upgrade myself with technologies, so that I can build more advanced and latest applications to meet your needs.</p>
         </div>
       </div>
       <hr>
       <div class="contact-me">
         <h2>Get In Touch</h2>
-        <h3>Lorem ipsum dolor sit amet, non elit.</h3>
-        <p class="contact-message">Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+        <h3>I’m currently available for development work.</h3>
+        <p class="contact-message">If you have a project that you want to get started, think you need my help with something or just fancy saying hey, then get in touch.</p>
         <a class="btn" href="mailto:name@email.com">CONTACT ME</a>
       </div>
     </div>
